# fastapi-project

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  cloudbuild.yaml  commands.md  main.py  pyproject.toml  readme.md  requirements.txt  test.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
adapters/inbound/graphql/: schema.py
api/graphql/: resolvers.py  schema.py
api/routes/: login_router.py  movies_router.py  todo_router.py  user_router.py
application/: movie_service.py  todo_service.py  user_service.py
core/: auth.py  container.py  log_utils.py
core/application/: movie_service.py  todo_service.py  user_service.py
core/domain/: movie.py  movie_api_client_interface.py  todo.py  todo_api_client_interface.py  user.py  user_repository_interface.py
core/logger/: exception_handlers.py  logger.py  logger_middleware.py  request_context.py
domain/: movie_api_client_interface.py  todo_api_client_interface.py  user_repository_interface.py
infrastructure/: container.py
infrastructure/api/: movies_api_client.py  todo_api_client.py
infrastructure/database/: base_repository.py  models.py  user_repository.py
infrastructure/logger/: exception_handlers.py  logger.py  logger_middleware.py
scripts/: pre_push_check.sh
tests/: test_user_service.py
tests/api/routes/: test_todo_router.py  (+3 more)
tests/application/: test_movies_service.py  test_todo_service.py  test_user_service.py
tests/core/: test_auth.py  test_container.py
tests/infrastructure/: test_auth.py  test_container.py
(+20 files in other folders)
