[tool.ruff]
line-length = 88
lint.extend-select = ["I"]  # Para organizar imports automaticamente

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["api", "core", "infrastructure"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__"
]

[project]
name = "FastProject"
version = "1.0"
requires-python = "==3.12.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy",
    "dependency-injector",
    "uuid",
    "pytest",
    "ruff",
    "sqlmodel",
    "pytest-cov",
    "httpx",
    "pre-commit",
    "python-dotenv",
    "pytest-asyncio",
    "authlib",
    "itsdangerous",
    "starlette",
    "ta-envy",
    "strawberry-graphql[fastapi]"
]
